--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "license": "MIT",
   "scripts": {
     "start": "parcel ./src/index.html --out-dir ./dev-out/",
-    "build": "parcel ./src/index.html --out-dir ."
+    "build": "parcel build ./src/index.html --out-dir . --public-url ./"
   },
   "devDependencies": {
     "parcel-bundler": "^1.7.1"
