--- a/package.json
+++ b/package.json
@@ -15,6 +15,6 @@
   "dependencies": {
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
-    "styled-components": "^3.2.6"
+    "tiny-stylish-components": "^0.0.1"
   }
 }
