--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "license": "MIT",
   "scripts": {
     "start": "parcel ./src/*.html --out-dir ./dev-out/ --no-hmr",
-    "build": "parcel build ./src/*.html --out-dir . --public-url ./"
+    "build": "parcel build ./src/*.html --out-dir dist --public-url ./"
   },
   "devDependencies": {
     "parcel-bundler": "^1.12.1"
